# grsched

./: Makefile  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: tests.yml
grsched/: __main__.py  _client.py  _config.py  _const.py  _event.py  _filter.py  _logger.py
requirements/: requirements.txt  test_requirements.txt
tests/: test_cli_click.py
