[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[tool.black]
exclude = '''
/(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.pytype
    | _build
    | buck-out
    | build
    | dist
)/
| docs/conf.py
'''
line-length = 100

[tool.coverage.run]
branch = true
source = ['grsched']

[tool.coverage.report]
exclude_lines = [
  'except ImportError',
  'raise NotImplementedError',
  'pass',
  'ABCmeta',
  'abstractmethod',
  'abstractproperty',
  'abstractclassmethod',
  'warnings.warn',
]
precision = 1
show_missing = true

[tool.isort]
include_trailing_comma = true
known_third_party = [
  'pytest',
]
line_length = 100
lines_after_imports = 2
multi_line_output = 3
skip_glob = [
  '*/.eggs/*',
  '*/.pytype/*',
  '*/.tox/*',
]

[tool.pytest.ini_options]
testpaths = [
  "tests",
]

md_report = true
md_report_color = "auto"
md_report_verbose = 0
